FIx style for videos on mobile and tablet

--- a/src/app/pages/filmography/filmography.component.scss
+++ b/src/app/pages/filmography/filmography.component.scss
@@ -22,14 +22,18 @@ $SPACER-HEIGHT: 4em;
 
 #main {
     min-height: calc(100vh - #{$SPACER-HEIGHT});
-    padding: 0 units(4);
+	padding: 0 units(4);
+	
+	@include sm {
+		flex-direction: column;
+	}
 }
 
 #main .thumb > .image {
 	-webkit-tap-highlight-color: color(WHITE);
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
+	@include background-size(cover);
 	vertical-align: middle;
 	border: 0;
 	height: 100%;
@@ -44,6 +48,16 @@ $SPACER-HEIGHT: 4em;
     margin: units(4);
 	width: calc((100vw - 2 * #{units(4)}) / 3 - 2 * #{units(4)}) !important;
 	transition: box-shadow 0.3s ease !important;
+
+	@include sm {
+		margin: units(2) 0;
+		width: calc(100vw - 2 * #{units(4)}) !important;
+	}
+	@include md {
+		margin: units(2);
+		width: calc(50vw - 2 * #{units(4)}) !important;
+		height: 25vh !important;
+	}
 }
 #main article:hover {
 	box-shadow: box-shadow(LARGE);
